# PCAnalys_complet

./: .eslintrc.js  .gitignore  .prettierignore  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml  recommendations_ia.md  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/agent/: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/agent/src/: App.tsx  main.tsx  styles.css
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/src/: main.rs
apps/web/: .env.example  .eslintrc.cjs  .eslintrc.js  IMPLEMENTATION_SUMMARY.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/a/: [id].tsx
apps/web/app/a/[id]/: page-simple.tsx  page.tsx
apps/web/app/report/[id]/: page.tsx
apps/web/apps/web/docs/api/: report-endpoint.md
apps/web/components/: cookie-banner.tsx
apps/web/components/ui/: toast.tsx
apps/web/docs/api/: recommend.md
apps/web/hooks/: use-toast.ts
apps/web/lib/: query-provider.tsx  utils.ts
apps/web/pages/api/: [...path].ts  analyze.ts  recommend.ts
apps/web/pages/api/report/: [id].ts
apps/web/src/api-docs/: analyze-endpoint.md
apps/web/src/server/: README.md  fastify.ts  schemas.ts  test-api.ts
apps/web/src/test/: setup.ts
apps/web/src/test/api/: analyze.integration.test.ts  analyze.test.ts  report.test.ts
apps/web/src/test/unit/: utils.test.ts
apps/web/tests/api/: recommend.test.ts
