[package]
name = "pcanalys-agent"
version = "0.1.0"
description = "PcAnalys Desktop Agent - System analysis and monitoring"
authors = ["PcAnalys Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sysinfo = { version = "0.30", features = ["multithread"] }

[[bin]]
name = "pcanalys-agent"
path = "src/main.rs"
